fix spacing between button and projects grid

--- a/styles.css
+++ b/styles.css
@@ -4,25 +4,51 @@
   --outline-color: #23001e;
 }
 
+.ubuntu-regular {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   background-color: var(--main-color);
+  font-family: "Ubuntu", sans-serif;
   display: flex;
   flex-direction: column;
-
+  min-width: 100vw;
   min-height: 100vh;
+  font-size: large;
 }
 
 #header-sect {
   background-color: var(--breaker-color);
-  border: 2px solid var(--outline-color);
+  border-bottom: 2px solid var(--outline-color);
   justify-content: start;
   align-content: center;
+  height: 90px;
+  display: flex;
+  flex-direction: row;
+}
+
+#logo-div {
+  justify-self: start;
+  align-self: center;
+  margin-left: 50px;
+}
+
+#heading-div {
+  justify-self: end;
+  align-self: center;
+  margin-left: auto;
+  margin-right: 100px;
 }
 
 #about-me {
   justify-content: center;
   align-content: center;
   text-align: center;
+  margin: 80px 100px;
+  line-height: 45px;
 }
 
 #projects-sect {
@@ -34,51 +60,80 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 14px;
-  grid-row-gap: 14px;
+
   justify-items: center;
   align-items: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: 37rem;
+  width: 100vw;
+  border: 1px solid black;
 }
 
 #project-1 {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+  height: 13rem;
+  width: 17rem;
+  margin-top: 50px;
+  border: 1px solid black;
 }
 
 #project-2 {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+  height: 13rem;
+  width: 17rem;
+  margin-top: 50px;
+  border: 1px solid black;
 }
 
 #project-3 {
   grid-column: 3 / 4;
   grid-row: 1 / 2;
+  height: 13rem;
+  width: 17rem;
+  margin-top: 50px;
+  border: 1px solid black;
 }
 
 #project-4 {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
+  height: 13rem;
+  width: 17rem;
+  margin-bottom: 50px;
+  border: 1px solid black;
 }
 
 #project-5 {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  height: 13rem;
+  width: 17rem;
+  margin-bottom: 50px;
+  border: 1px solid black;
 }
 
 #project-6 {
   grid-column: 3 / 4;
   grid-row: 2 / 3;
+  height: 13rem;
+  width: 17rem;
+  margin-bottom: 50px;
+  border: 1px solid black;
 }
 
 #btn-div {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
+  margin-bottom: 100px;
 }
 
 button {
   background-color: var(--breaker-color);
-  justify-self: center;
-  align-self: center;
 }
 
 #contact-sect {
